<resources>
    <string name="app_name">StoryUp</string>
    <string name="title_explore">Explore</string>
    <string name="title_search">Search</string>
    <string name="title_add_story">New Story</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to Facebook Login. -->
    <string name="facebook_app_id">1986987818261385</string>
    <string name="fb_login_protocol_scheme">fb1986987818261385</string>



    <array name="categories">
        <item>Love</item>
        <item>Crime</item>
        <item>Adventure</item>
        <item>Science Fiction</item>
        <item>Horror</item>
    </array>
</resources>
