<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_explore"
        android:icon="@android:drawable/ic_menu_directions"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_add_story"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/title_add_story" />


    <item
        android:id="@+id/navigation_notifications"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/title_profile" />

</menu>
